--- a/styles/main.css
+++ b/styles/main.css
@@ -6,15 +6,44 @@ body {
     font-family: 'Work Sans', sans-serif;
     margin: 0;
     padding: 0;
+    /* background-image: url("../images/geeks.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed; */
+}
+
+.backgroundimage {
     background-image: url("../images/geeks.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    background-attachment: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    position: fixed;
+    filter: blur(3px);
+    transform: scale(1.1); 
+}
+
+.backgroundgif {
+    background-image: url("../images/background.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    position: fixed;
+    filter: blur(5px);
+    transform: scale(1.1); 
 }
 
 header {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     background-color: rgb(255, 71, 71, 0.8);
     color: white;
 }
@@ -22,6 +51,16 @@ header {
 header h1 {
     display: flex;
     font-weight: 100;
+}
+
+header a {
+    display: flex;
+    font-weight: 100;
+    color: white;
+    text-decoration: none;
+    font-size: 1.5em;
+    margin: 1em;
+
 }
 
 /* main {
@@ -151,9 +190,97 @@ form label {
     flex-direction: column;
 }
 
+.avatarhead p {
+    padding-right: 1em;
+}
+
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     margin: 1em;
 }
 
+.button {
+    width: 16.5em;
+    height: 2.5em;
+    /* background-color: rgb(255, 71, 71, 0.8); */
+    border: 0.1em solid;
+    border-color: rgb(255, 71, 71, 0.8);
+    font-weight: 200;
+    margin: auto;
+    margin-top: 6em;
+}
+
+.button:hover {
+    background-color: rgb(255, 71, 71, 0.8);
+}
+
+.button a {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: white;
+    padding: 0.65em;
+
+}
+
+.matches {
+    display: flex;
+    flex-direction: row;
+    color: white;
+    background-color: rgb(58, 58, 58, 0.8);
+    margin: 0.5em;
+    max-width: 24.5em;
+}
+
+.matches img {
+    width: 7em;
+    height: 7em;
+    margin: 1em;
+    border-radius: 5em;
+}
+
+output {
+    color: white;
+    font-size: 1.5em;
+    margin-top: -1em;
+}
+
+.profileimage {
+    width: 100%;
+    background-color: rgb(58, 58, 58, 0.8);
+}
+
+.profileimage img {
+    display: flex;
+    width: 27.5em;
+    max-height: 27em;
+    margin: auto;
+}
+
+.description {
+    color: white;
+    background-color: rgb(58, 58, 58, 0.8);
+    padding: 1em;
+    height: 100%;
+}
+
+.description a {
+    width: 16.5em;
+    height: 2.5em;
+    border: 0.1em solid;
+    border-color: rgb(255, 71, 71, 0.8);
+    font-weight: 200;
+    margin: auto;
+    margin-top: 2em;
+    color: white;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    padding-top: 1em;
+}
+
+.description a:hover {
+    background-color: rgb(255, 71, 71, 0.8);
+}
