--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,7 @@ body {
 }
 
 .backgroundimage {
-    background-image: url("../images/geeks.jpg");
+    background-image: url("../images/theater.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -23,7 +23,7 @@ body {
     width: 100%;
     z-index: -1;
     position: fixed;
-    filter: blur(3px);
+    filter: blur(20px);
     transform: scale(1.1); 
 }
 
@@ -46,6 +46,7 @@ header {
     justify-content: space-between;
     background-color: rgb(255, 71, 71, 0.8);
     color: white;
+    box-shadow: 0px 17px 20px -11px rgba(0,0,0,0.6);
 }
 
 header h1 {
@@ -198,6 +199,7 @@ form label {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     margin: 1em;
 }
 
@@ -229,7 +231,7 @@ form label {
     display: flex;
     flex-direction: row;
     color: white;
-    background-color: rgb(58, 58, 58, 0.8);
+    background-color: rgb(58, 58, 58, 0.6);
     margin: 0.5em;
     max-width: 24.5em;
 }
@@ -265,7 +267,7 @@ output {
     color: white;
     background-color: rgb(58, 58, 58, 0.8);
     padding: 1em;
-    height: 100%;
+    height: 15em;
 }
 
 .description a {
