--- a/styles/main.css
+++ b/styles/main.css
@@ -46,6 +46,7 @@ header {
     justify-content: space-between;
     background-color: rgb(255, 71, 71, 0.8);
     color: white;
+    width: 100%;
     box-shadow: 0px 17px 20px -11px rgba(0,0,0,0.6);
 }
 
@@ -73,9 +74,9 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(58, 58, 58, 0.8);
+    background-color: rgb(58, 58, 58, 0.95);
     /* margin: 1.5em; */
-    width: 25em;
+    width: 22em;
     margin: auto;
     margin-top: 4em;
     padding-top: 1em;
@@ -95,6 +96,7 @@ form input {
     background-color: rgb(75, 75, 75);
     color: white;
     font-weight: 100;
+    -webkit-appearance: none;
 }
 
 form textarea {
@@ -127,6 +129,7 @@ form input[type=submit] {
     height: 1.5em;
     background-color: rgb(255, 71, 71, 0.8);
     font-weight: 200;
+    -webkit-appearance: none;
 }
 
 form select {
@@ -137,6 +140,7 @@ form select {
     border: none;
     /* font-size: 1.5em; */
     font-weight: 200em;
+    -webkit-appearance: none;
 }
 
 h2 {
