--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ body {
     z-index: -1;
     position: fixed;
     filter: blur(20px);
-    transform: scale(1.1); 
+    transform: scale(1.2); 
 }
 
 .backgroundgif {
@@ -48,11 +48,12 @@ header {
     color: white;
     width: 100%;
     box-shadow: 0px 17px 20px -11px rgba(0,0,0,0.6);
+    height: 4.5em;
 }
 
 header h1 {
     display: flex;
-    font-weight: 100;
+    font-weight: 300;
 }
 
 header a {
@@ -63,6 +64,22 @@ header a {
     font-size: 1.5em;
     margin: 1em;
 
+}
+
+.mainHeader a img {
+    width: 4em;
+    height: 4em;
+    margin-top: -1.5em;
+}
+
+header a img {
+    width: 2em;
+    height: 2em;
+    margin-top: -0.3em;
+}
+
+header a img:nth-child(3) {
+    height: 1em;
 }
 
 /* main {
@@ -114,12 +131,12 @@ form textarea {
 }
 
 form input::placeholder {
-    color: rgba(255, 255, 255, 0.938);
+    color: rgba(255, 255, 255, 0.425);
     font-weight: 200;
 }
 
 form textarea::placeholder {
-    color: rgba(255, 255, 255, 0.938);
+    color: rgba(255, 255, 255, 0.425);
     font-weight: 200;
 }
 
@@ -132,14 +149,37 @@ form input[type=submit] {
     -webkit-appearance: none;
 }
 
+form input[type=file] {
+    display: flex;
+    padding-top: 0.5em;
+    font-weight: 100;
+}
+
+form input[type=range] {
+    margin-top: 0.5em;
+}
+
+output {
+
+    display: flex;
+    color: white;
+    font-size: 1.3em;
+    margin-top: -2.05em;
+    padding-left: 3.6em;
+    height: 1em;
+    font-weight: 300;
+}
+
 form select {
     margin-bottom: 1em;
-    width: 29em;
+    width: 20em;
     background-color: rgb(75, 75, 75);
     color: white;
     border: none;
-    /* font-size: 1.5em; */
+    padding: 0.5em;
+    font-size: 1em;
     font-weight: 200em;
+    border-radius: 0;
     -webkit-appearance: none;
 }
 
@@ -238,6 +278,7 @@ form label {
     background-color: rgb(58, 58, 58, 0.6);
     margin: 0.5em;
     max-width: 24.5em;
+    border-radius: 0.5em;
 }
 
 .matches img {
@@ -245,12 +286,6 @@ form label {
     height: 7em;
     margin: 1em;
     border-radius: 5em;
-}
-
-output {
-    color: white;
-    font-size: 1.5em;
-    margin-top: -1em;
 }
 
 .profileimage {
@@ -265,6 +300,7 @@ output {
     max-width: 25em;
     max-height: 25em;
     margin: auto;
+    padding-top: 1em;
 }
 
 .description {
@@ -307,6 +343,7 @@ output {
 .chatlinks p {
     color: white;
     font-weight: 300;
+    padding-right: 0.5em;
 }
 
 .chatlinks img {
@@ -314,6 +351,7 @@ output {
     height: 3em;
     border-radius: 5em;
     margin: 0.5em;
+    margin-top: 1em;
 }
 
 .chatrechts {
@@ -336,6 +374,7 @@ output {
     height: 3em;
     border-radius: 5em;
     margin: 0.5em;
+    margin-top: 1em;
 }
 
 .chatinput {
