--- a/styles/main.css
+++ b/styles/main.css
@@ -379,6 +379,52 @@ form label {
     margin-top: 1em;
 }
 
+.chataccept {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 50em;
+    width: 95%;
+    background-color: rgb(58, 58, 58, 0.8);
+    border-radius: 1em;
+    margin: auto;
+    margin-top: 22em;
+}
+
+.chataccept p {
+    color: white;
+    font-weight: 300;
+    padding-right: 0.5em;
+}
+
+.chataccept img {
+    width: 3em;
+    height: 3em;
+    border-radius: 5em;
+    margin: 0.5em;
+    margin-top: 1em;
+}
+
+.responsebuttons a {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    width: 5em;
+    border: 0.1em solid;
+    border-color: rgb(255, 71, 71, 0.8);
+    font-weight: 200;
+    /* margin: auto; */
+    color: white;
+    text-decoration: none;
+    padding: 0.5em;
+    margin: 0.5em;
+}
+
+.chataccept a:hover {
+    background-color: rgb(255, 71, 71, 0.8);
+}
+
+
 .chatrechts {
     display: flex;
     flex-direction: row;
@@ -404,23 +450,25 @@ form label {
 
 .chatinput {
     display: flex;
+    justify-content: space-between;
     position: fixed;
     bottom: 0;
     width: 100%;
     /* background-color: white; */
     height: 3em;
-    padding: 1em;
+    /* padding: 1em; */
 }
 
 .chatinput [type=text] {
     display: flex;
-    width: 70%;
+    width: 65%;
     height: 2em;
     border-radius: 1em;
     border: none;
     background-color: rgb(88, 88, 88, 0.8);
     color: white;
     padding-left: 0.5em;
+    margin: auto;
     font-size: 1em;
 }
 
@@ -432,13 +480,14 @@ form label {
     display: flex;
     /* width: 10em; */
     height: 2em;
+    margin: auto;
     color: white;
     background-color: rgb(255, 71, 71, 0.8);
     font-weight: 200;
     border: none;
     font-size: 1em;
     -webkit-appearance: none;
-    margin-left: 1em;
+    /* margin-left: 1em; */
     border-radius: 1em;
     padding: 0.5em;
 }
@@ -450,70 +499,25 @@ form label {
     bottom: 0;
 }
 
-/* .requestimage {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    margin: auto;
-    background-color: rgb(58, 58, 58, 0.8);
-}
-
-.requestimage img {
-    display: flex;
-    margin: auto;
-    width: 25em;
-    padding: 1em;
-}
-
-.requestimage a {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    width: 16.5em;
-    border: 0.1em solid;
-    border-color: rgb(255, 71, 71, 0.8);
-    font-weight: 200;
-    margin: auto;
-    color: white;
-    text-decoration: none;
-    padding: 1em;
-    margin-top: 1em;
-}
-
-.requestimage a:hover {
-    background-color: rgb(255, 71, 71, 0.8);
-} */
-
 .warning {
     display: flex;
     justify-content: center;
     background-color: rgb(255, 71, 71, 0.8);
     color: white;
-    /* margin-bottom: -1em; */
     margin: auto;
     padding: 1em;
     z-index: -10;
 }
-
-/* .descriptionrequest {
-    color: white;
-    background-color: rgb(58, 58, 58, 0.8);
-    padding: 1em;
-    height: 15em;
-    display: flex;
-    flex-direction: column;
-}  */
 
 @keyframes colorchange {
     0%   {background-color: rgb(255, 71, 71, 0.8);}
     100% {background-color: rgba(138, 255, 71, 0.8);}
   }
 
-  @-webkit-keyframes colorchange {
+  /* @-webkit-keyframes colorchange {
     0%   {background-color: rgb(255, 71, 71, 0.8);}
     100% {background-color: rgba(138, 255, 71, 0.8);}
-  }
+  } */
 
 .confirm {
     display: flex;
@@ -526,7 +530,7 @@ form label {
     animation-name: colorchange;
     animation-duration: 4s;
     animation-fill-mode: forwards;
-    -webkit-animation-name: colorchange;
+    /* -webkit-animation-name: colorchange;
     -webkit-animation-duration: 4s;
-    -webkit-animation-fill-mode: forwards;
+    -webkit-animation-fill-mode: forwards; */
 }
