--- a/views/avatar.ejs
+++ b/views/avatar.ejs
@@ -1,23 +1,7 @@
-<!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Account setup</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700" rel="stylesheet">
-    </head>
-    <body>
-            <div class="backgroundimage"></div>
-        <header>
-                <a href="index.html"><img src="images/Logo/SVG/nateLogo.svg"></a>
-                <h1>Account</h1>
-                <a href="index.html"><img src="images/Logo/SVG/loginIcon.svg"></a>
-        </header>
-        <div class="container">
+<% include partials/registrationHeader %>
+  <div class="container">
             <div class="matches">
-                <a href="completion.html"><img src="images/indi.jpeg"></a>
+                <a href="completion"><img src="images/indi.jpeg"></a>
                     <div class="avatarhead">
                         <h3>Indiana Jones</h3>
                         <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
@@ -40,6 +24,4 @@
                             </div>
                         </div>
                     </div>
-        <script src="script/index.js" async defer></script>
-    </body>
-</html>
+<% include partials/footer %>
