--- a/views/chataccept.ejs
+++ b/views/chataccept.ejs
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Account setup</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700" rel="stylesheet">
-    </head>
-    <body>
-            <div class="backgroundimage"></div>
-        <header>
-                <a href="matches.html"><img src="images/Logo/SVG/nateLogout.svg"></a>
-                <h1>Chat</h1>
-                <a href="filter.html"><img src="images/Logo/SVG/nateFilter.svg"></a>
-        </header>
+<% include partials/matchHeader %>
 
         <div class="chatlinks">
             <a href="matchprofile.html"><img src="images/indi.jpeg"></a>
@@ -39,7 +23,4 @@
             <input type="text" placeholder="stuur een bericht"> 
             <input type="submit" value="verzend">
         </div>
-        
-        <script src="script/index.js" async defer></script>
-    </body>
-</html>
+        <% include partials/footer %>
