--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -1,23 +1,7 @@
-<!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Matches</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700" rel="stylesheet">
-    </head>
-    <body>
-        <div class="backgroundimage"></div>
-        <header>
-                <a href="index.html"><img src="images/Logo/SVG/nateLogout.svg"></a>
-                <h1>Matches</h1>
-                <a href="filter.html"><img src="images/Logo/SVG/nateFilter.svg"></a>
-        </header>
+<% include partials/matchHeader %>
         <div class="container">
             <div class="matches">
-                <a href="matchprofile.html"><img src="images/indi.jpeg"></a>
+                <a href="matchprofile"><img src="images/indi.jpeg"></a>
                     <div class="avatarhead">
                         <h3>Indiana Jones</h3>
                         <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
@@ -25,7 +9,7 @@
                 </div>
 
                 <div class="matches">
-                        <a href="chataccept.html"><img src="images/tony.jpg"></a>
+                        <a href="chataccept"><img src="images/tony.jpg"></a>
                         <div class="avatarhead">
                             <h3>Tony stark</h3>
                             <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
@@ -82,6 +66,4 @@
                                                 </div>
                                             </div>
                     </div>
-        <script src="script/index.js" async defer></script>
-    </body>
-</html>
+                    <% include partials/footer %>
