--- a/views/partials/mainLogin.ejs
+++ b/views/partials/mainLogin.ejs
@@ -1,5 +1,5 @@
 
-    <form action="matches.html">
+    <form action="matches">
         <h2>Aanmelden</h2>
         <input type="text" placeholder="gebruikersnaam">
         <input type="password" placeholder="wachtwoord">
