--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 
         
-<script src="script/index.js" async defer></script>
+<script src="../../static/main.js" async defer></script>
 </body>
 </html>
