added a bottom nav bar and made css changes

--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -66,4 +66,5 @@
                                                 </div>
                                             </div>
                     </div>
+                    <% include partials/bottomNav %>
                     <% include partials/footer %>
