--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -15,7 +15,7 @@
                             <input type="password" id="newPassword" placeholder="wachtwoord" required/>
                             <input type="password" id="repeatPassword" placeholder="herhaal wachtwoord" required/>
                             <input type="submit" value="submit">
-                            <a href="index">Of meld je hier aan.</a>
+                            <a href="/">Of meld je hier aan.</a>
                         </fieldset>
         </form>
         
