--- a/views/request.ejs
+++ b/views/request.ejs
@@ -5,7 +5,7 @@
                 Weet je zeker dat je dit wilt doen?
                 Deze persoon krijgt hier een melding van.</p>
         </section>
-        <div class="profileimage">
+        <div class="requestprofileimage">
             <img src="images/indi.jpeg">
             <div class="description">
             <h1>Toestemming vereist:</h1>
