--- a/views/requestsend.ejs
+++ b/views/requestsend.ejs
@@ -3,7 +3,7 @@
         <section class="confirm">
             <p>De request is verstuurd naar Indiana Jones, 23! Je wordt teruggestuurd naar de matches pagina.</p>
         </section>
-        <div class="profileimage">
+        <div class="requestprofileimage">
             <img src="images/indi.jpeg">
             <div class="description">
             <h1>Toestemming vereist:</h1>
