--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,3 @@
-html, body {
-    height: 100%;
-}
 
 body {
     font-family: 'Work Sans', sans-serif;
@@ -39,9 +36,12 @@ body {
     position: fixed;
     filter: blur(5px);
     transform: scale(1.1); 
+    margin-top: -6em;
 }
 
 header {
+    position: fixed;
+    top: 0;
     display: flex;
     justify-content: space-between;
     background-color: rgb(255, 71, 71, 0.8);
@@ -96,7 +96,7 @@ form {
     /* margin: 1.5em; */
     width: 22em;
     margin: auto;
-    margin-top: 2em;
+    margin-top: 8em;
     padding-top: 1em;
     /* border-radius: 0.5em; */
 }
@@ -278,6 +278,8 @@ form label {
     color: white;
     background-color: rgb(58, 58, 58, 0.6);
     margin: 0.5em;
+    margin-top: 5em;
+    margin-bottom: -3em;
     max-width: 24.5em;
     border-radius: 0.5em;
 }
@@ -291,7 +293,6 @@ form label {
 
 .profileimage {
     width: 100%;
-    /* height: 100%; */
     background-color: rgb(58, 58, 58, 0.8);
 }
 
@@ -306,15 +307,38 @@ form label {
     z-index: 1;
     border-radius: 50em;
     padding-top: 1em;
+    margin-top: 4.5em;
     /* box-shadow: 13px 20px 32px -16px rgba(0,0,0,0.75); */
 
 }
+
+.requestprofileimage {
+    width: 100%;
+    background-color: rgb(58, 58, 58, 0.8);
+}
+
+.requestprofileimage img {
+    display: flex;
+    /* width: 27.5em; */
+    width: 100%;
+    max-width: 20em;
+    max-height: 20em;
+    margin: auto;
+    /* margin-bottom: -1em; */
+    z-index: 1;
+    border-radius: 50em;
+    padding-top: 1em;
+    /* margin-top: 4.5em; */
+    /* box-shadow: 13px 20px 32px -16px rgba(0,0,0,0.75); */
+
+}
+
 
 .description {
     color: white;
     background-color: rgb(58, 58, 58, 0.8);
     padding: 1em;
-    /* height: 15em; */
+    height: 23em;
     display: flex;
     flex-direction: column;
     z-index: -5;
@@ -358,6 +382,7 @@ form label {
     background-color: rgb(58, 58, 58, 0.8);
     margin: 0.5em;
     border-radius: 1em;
+    margin-top: 5em;
 }
 
 .chatlinks p {
@@ -501,7 +526,8 @@ form label {
     color: white;
     margin: auto;
     padding: 1em;
-    z-index: -10;
+    margin-top: 4.5em;
+    /* z-index: -10; */
 }
 
 @keyframes colorchange {
@@ -520,6 +546,7 @@ form label {
     background-color: rgb(255, 71, 71, 0.8);
     color: white;
     margin: auto;
+    margin-top: 5em;
     padding: 1em;
     z-index: -10;
     animation-name: colorchange;
@@ -529,3 +556,20 @@ form label {
     -webkit-animation-duration: 4s;
     -webkit-animation-fill-mode: forwards; */
 }
+
+.bottomNav {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    /* background-color: rgb(255, 71, 71); */
+    background-color: rgb(58, 58, 58);
+    /* background-color: rgb(148, 148, 148); */
+}
+
+.bottomNav img{
+    width: 3em;
+}
+
+
