--- a/views/partials/registrationHeader.ejs
+++ b/views/partials/registrationHeader.ejs
@@ -6,6 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../main.css">
+        <link rel="shortcut icon" type="image/x-icon" href="/static/images/Logo/1x/favicon.png" />
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700" rel="stylesheet">
     </head>
     <body>
