a lot of modifications and created a api test page also added testplan and testresultaat

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,4 +1,4 @@
-<% include partials/matchHeader %>
+<% include partials/headers/chatheader %>
         <div class="chatlinks">
             <a href="matchprofile.html"><img src="images/indi.jpeg"></a>
             <p>Hi! Ik ben stephan, leuk om kennis te maken!</p>
