--- a/views/completion.ejs
+++ b/views/completion.ejs
@@ -1,10 +1,10 @@
-<% include partials/registrationHeader %>
+<% include partials/headers/registrationHeader %>
         <div class="container">
             <div class="matches">
                 <a href="registration"><img src="images/tick.png"></a>
                     <div class="avatarhead">
                         <h3>Algemene informatie</h3>
-                        <p>Hier heb je de algemene informatie compleet ingevuld. Klik om aan te passen.</p>
+                        <p>Klik om aan te passen.</p>
                     </div>
                 </div>
 
@@ -12,7 +12,7 @@
                     <a href="interests"><img src="images/tick.png"></a>
                         <div class="avatarhead">
                             <h3>Persoonlijke voorkeuren</h3>
-                            <p>Hier heb je jouw persoonlijke voorkeuren toegevoegd. Klik om aan te passen.</p>
+                            <p>Klik om aan te passen.</p>
                         </div>
                     </div>
 
@@ -20,7 +20,7 @@
                         <a href="avatar"><img src="images/tick.png"></a>
                             <div class="avatarhead">
                                 <h3>Avatar keuze</h3>
-                                <p>Hier heb je jouw avatar gekozen. Klik om aan te passen.</p>
+                                <p>Klik om aan te passen.</p>
                             </div>
                         </div>
                     </div>
