--- a/views/filter.ejs
+++ b/views/filter.ejs
@@ -1,4 +1,4 @@
-<% include partials/matchHeader %>
+<% include partials/headers/matchHeader %>
         <form action="matches">
                         <fieldset>
                            <legend>Filter op:</legend>
