--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<% include partials/mainHeader %>
+<% include partials/headers/mainHeader %>
 <% include partials/mainLogin %>
 <% include partials/footer %>
 
