--- a/views/matchafter.ejs
+++ b/views/matchafter.ejs
@@ -1,4 +1,4 @@
-<% include partials/matchHeader %>
+<% include partials/headers/matchHeader %>
         <div class="container">
             <div class="matches">
                 <a href="matchprofile"><img src="images/profile.jpg"></a>
@@ -66,4 +66,5 @@
                                                 </div>
                                             </div>
                     </div>
+                    <% include partials/bottomNav %>
                     <% include partials/footer %>
