--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -1,9 +1,9 @@
-<% include partials/matchHeader %>
+<% include partials/headers/matchHeader %>
         <div class="container">
             <div class="matches">
                 <a href="matchprofile"><img src="images/indi.jpeg"></a>
                     <div class="avatarhead">
-                        <h3>Indiana Jones</h3>
+                        <h3>Stephan, 23</h3>
                         <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                     </div>
                 </div>
@@ -11,7 +11,7 @@
                 <div class="matches">
                         <a href="chataccept"><img src="images/tony.jpg"></a>
                         <div class="avatarhead">
-                            <h3>Tony stark</h3>
+                            <h3>Karel, 22</h3>
                             <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                         </div>
                     </div>
@@ -19,49 +19,49 @@
                     <div class="matches">
                         <img src="images/cap.png">
                             <div class="avatarhead">
-                                <h3>captain america</h3>
+                                <h3>Jurgen, 25</h3>
                                 <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                             </div>
                         </div>
                     <div class="matches">
                         <img src="images/cap.png">
                             <div class="avatarhead">
-                                <h3>captain america</h3>
+                                <h3>Erwin, 25</h3>
                                 <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                             </div>
                         </div>
                         <div class="matches">
                             <img src="images/cap.png">
                                 <div class="avatarhead">
-                                    <h3>captain america</h3>
+                                    <h3>Steven, 26</h3>
                                     <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                 </div>
                             </div>
                             <div class="matches">
                                 <img src="images/cap.png">
                                     <div class="avatarhead">
-                                        <h3>captain america</h3>
+                                        <h3>Oscar, 20</h3>
                                         <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                     </div>
                                 </div>
                                 <div class="matches">
                                     <img src="images/cap.png">
                                         <div class="avatarhead">
-                                            <h3>captain america</h3>
+                                            <h3>Richard, 22</h3>
                                             <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                         </div>
                                     </div>
                                     <div class="matches">
                                         <img src="images/cap.png">
                                             <div class="avatarhead">
-                                                <h3>captain america</h3>
+                                                <h3>Rick, 21</h3>
                                                 <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                             </div>
                                         </div>
                                         <div class="matches">
                                             <img src="images/cap.png">
                                                 <div class="avatarhead">
-                                                    <h3>captain america</h3>
+                                                    <h3>Nick, 27</h3>
                                                     <p>Heldhaftig, bijdehand en heeft altijd zn praatje klaar</p>
                                                 </div>
                                             </div>
