--- a/views/matchprofile.ejs
+++ b/views/matchprofile.ejs
@@ -1,4 +1,4 @@
-<% include partials/matchHeader %>
+<% include partials/headers/matchHeader %>
         <div class="profileimage">
             <img src="images/indi.jpeg">
         </div>
@@ -8,5 +8,6 @@
             <a href="chat">Stuur een bericht</a>
             <a href="request">Profielfoto request</a>
         </div>
+        <% include partials/bottomNav %>
 <% include partials/footer %>
         
