--- a/views/partials/bottomNav.ejs
+++ b/views/partials/bottomNav.ejs
@@ -1,5 +1,5 @@
 <div class="bottomNav">
-        <a href=""><img src="../../static/images/Logo/SVG/loginIcon.svg"></a>
-        <a href=""><img src="../../static/images/Logo/SVG/nateFilter.svg"></a>
-        <a href=""><img src="../../static/images/Logo/SVG/nateFilter.svg"></a>
+        <a href="profile"><img src="../../static/images/Logo/SVG/loginIcon.svg"></a>
+        <a href="chatlist"><img src="../../static/images/Logo/SVG/chat.svg"></a>
+        <a href=""><img src="../../static/images/Logo/SVG/notification.svg"></a>
       </div>
