--- a/views/request.ejs
+++ b/views/request.ejs
@@ -1,4 +1,4 @@
-<% include partials/matchHeader %>
+<% include partials/headers/matchHeader %>
 
         <section class="warning">
             <p>Je staat op het punt om een profielfoto request te sturen naar Indiana Jones, 23.
