--- a/views/requestsend.ejs
+++ b/views/requestsend.ejs
@@ -1,4 +1,4 @@
-<% include partials/refreshHeader %>
+<% include partials/headers/refreshHeader %>
 
         <section class="confirm">
             <p>De request is verstuurd naar Indiana Jones, 23! Je wordt teruggestuurd naar de matches pagina.</p>
