--- a/static/main.css
+++ b/static/main.css
@@ -30,7 +30,7 @@ body {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    height: 100%;
+    height: 110%;
     width: 100%;
     z-index: -1;
     position: fixed;
@@ -129,6 +129,7 @@ form textarea {
     background-color: rgb(75, 75, 75);
     color: white;
     font-weight: 100;
+    font-family: inherit;
 }
 
 form input::placeholder {
@@ -158,6 +159,12 @@ form input[type=file] {
 
 form input[type=range] {
     margin-top: 0.5em;
+}
+
+form img {
+    width: 100%;
+    margin: auto;
+    margin-bottom: 1em;
 }
 
 output {
@@ -234,9 +241,11 @@ form label {
 .avatarhead {
     display: flex;
     flex-direction: column;
+    width: 12em;
 }
 
 .avatarhead p {
+    margin-top: -0.1em;
     padding-right: 1em;
 }
 
@@ -291,10 +300,10 @@ form label {
     border-radius: 5em;
 }
 
-.profileimage {
-    width: 100%;
-    background-color: rgb(58, 58, 58, 0.8);
-}
+/* .profileimage {  */
+    /* width: 100%;  */
+    /* background-color: rgb(58, 58, 58, 0.8); */
+/* } */
 
 .profileimage img {
     display: flex;
@@ -314,7 +323,7 @@ form label {
 
 .requestprofileimage {
     width: 100%;
-    background-color: rgb(58, 58, 58, 0.8);
+    /* background-color: rgb(58, 58, 58, 0.8); */
 }
 
 .requestprofileimage img {
@@ -333,15 +342,14 @@ form label {
 
 }
 
-
 .description {
     color: white;
-    background-color: rgb(58, 58, 58, 0.8);
+    /* background-color: rgb(58, 58, 58, 0.8); */
     padding: 1em;
-    height: 23em;
+    height: 100%;
+    /* width: 100%; */
     display: flex;
     flex-direction: column;
-    z-index: -5;
 }
 
 .description a {
@@ -363,17 +371,22 @@ form label {
     background-color: rgb(255, 71, 71, 0.8);
 }
 
-/* .description h1 {
-    max-width: 19em;
+.description h1 {
+    max-width: 23em;
     padding-right: 2em;
     margin: auto;
+    margin-bottom: 1em;
 }
 
 .description p {
-    max-width: 19em;
+    /* max-width: 19em;
     padding-right: 2em;
+    margin: auto; */
+    /* padding-right: 2em; */
+    max-width: 21em;
     margin: auto;
-} */
+    margin-bottom: 1em;
+}
 
 .chatlinks {
     display: flex;
@@ -546,7 +559,7 @@ form label {
     background-color: rgb(255, 71, 71, 0.8);
     color: white;
     margin: auto;
-    margin-top: 5em;
+    margin-top: 4.5em;
     padding: 1em;
     z-index: -10;
     animation-name: colorchange;
@@ -569,7 +582,17 @@ form label {
 }
 
 .bottomNav img{
-    width: 3em;
+    width: 2.5em;
+    padding: 0.3em;
+}
+
+.cat {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    width: 20em;
+    height: 20em;
+    margin-top: 5em;
 }
 
 
