--- a/views/chataccept.ejs
+++ b/views/chataccept.ejs
@@ -1,4 +1,4 @@
-<% include partials/matchHeader %>
+<% include partials/headers/matchHeader %>
 
         <div class="chatlinks">
             <a href="matchprofile.html"><img src="images/indi.jpeg"></a>
