--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 
         
-<script src="../../static/main.js" async defer></script>
+<!-- <script src="../../static/main.js" async defer></script> -->
+<script src="../../index.js"></script>
 </body>
 </html>
