added project files

--- a/views/chatlist.ejs
+++ b/views/chatlist.ejs
@@ -1,7 +1,7 @@
 <% include partials/headers/chatheader %>
         <div class="container">
             <div class="matches">
-                <a href="chat"><img src="images/indi.jpeg"></a>
+                <a href="chat"><img src="images/profile.jpg"></a>
                     <div class="avatarhead">
                         <h3>Stephan, 23</h3>
                         <p>Super vet! Lijkt me gezellig!</p>
@@ -9,7 +9,7 @@
                 </div>
 
                 <div class="matches">
-                        <a href="chataccept"><img src="images/tony.jpg"></a>
+                        <a href="chataccept"><img src="images/profile2.jpg"></a>
                         <div class="avatarhead">
                             <h3>John, 21</h3>
                             <p>Gezellig (: Ga je met stephan op date?</p>
@@ -17,14 +17,14 @@
                     </div>
 
                     <div class="matches">
-                        <img src="images/cap.png">
+                        <img src="images/person3.jpg">
                             <div class="avatarhead">
                                 <h3>Bob, 25</h3>
                                 <p>Meh ik mag hem niet. Je kan beter met mij daten.</p>
                             </div>
                         </div>
                     <div class="matches">
-                        <img src="images/cap.png">
+                        <img src="images/profile3.jpeg">
                             <div class="avatarhead">
                                 <h3>Ferry, 23</h3>
                                 <p>Lol sick! veel plezier samen.</p>
