--- a/views/partials/headers/chatheader.ejs
+++ b/views/partials/headers/chatheader.ejs
@@ -12,7 +12,7 @@
     <body>
         <div class="backgroundimage"></div>
         <header>
-                <a href="/"><img src="images/Logo/SVG/nateLogout.svg"></a>
+                <a href="matches"><img src="images/Logo/SVG/natelogo.svg"></a>
                 <h1>Chat</h1>
                 <a href="filter"><img src="images/Logo/SVG/nateFilter.svg"></a>
         </header>
