--- a/views/partials/headers/logoutHeader.ejs
+++ b/views/partials/headers/logoutHeader.ejs
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Filter</title>
+        <title>Mijn Profiel</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
@@ -12,7 +12,7 @@
     <body>
         <div class="backgroundimage"></div>
         <header>
-                <a href="/"><img src="images/Logo/SVG/natelogo.svg"></a>
-                <h1>Match</h1>
-                <a href="filter"><img src="images/Logo/SVG/nateFilter.svg"></a>
+                <a href="/"><img src="images/Logo/SVG/nateLogout.svg"></a>
+                <h1>Profiel</h1>
+                <a href="matches"><img src="images/Logo/SVG/chat.svg"></a>
         </header>
