--- a/static/main.css
+++ b/static/main.css
@@ -16,6 +16,7 @@ body {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
+    margin-top: -5em;
     height: 100%;
     width: 100%;
     z-index: -1;
